--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ UserSettings/EditorUserSettings.asset
 UserSettings/Layouts/default-2021.dwlt
 ProjectSettings/ShaderGraphSettings.asset
 UserSettings/EditorUserSettings.asset
+*.dwlt
+/UserSettings
